@@ -3,6 +3,7 @@ package com.example.zjusiege.WebSocket;
 import com.example.zjusiege.Config.Config;
 import com.example.zjusiege.Service.HyperchainService;
 import com.example.zjusiege.SiegeParams.SiegeParams;
+import com.example.zjusiege.Utils.Utils;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
 import org.springframework.stereotype.Component;
@@ -26,13 +27,14 @@ public class SiegeBattle {
     private static final Map<String, Map<String, Session>> playerSession = new ConcurrentHashMap<>();
     private static final Map<String, Map<String, JSONObject>> playerSoldiers = new ConcurrentHashMap<>();
     //与某个客户端的连接会话，需要通过它来给客户端发送数据
-    private Session session;
+//    private Session session;
     private static String attackerAddress;
     private static String defenderAddress;
     private static int playersPerGame = 2;
     private static int buySoldiersTimer = 60;
     private static int round = 5;
-    private static int roundTimer = 20;
+    private static int roundTimer = 5;
+    private static boolean isOver = false;
 
 
     @OnOpen
@@ -56,13 +58,21 @@ public class SiegeBattle {
                     .element("price", 0.)
                     .element("quantity", 0)
                     .element("pay", false)
-                    .element("ready", false));
+                    .element("ready", false)
+                    .element("round", true)
+                    .element("soldier", 0)
+                    .element("pick", false)
+                    .element("result", "none"));
             map.put(defenderAddress, new JSONObject()
                     .element("type", new ArrayList<Integer>())
                     .element("price", 0.)
                     .element("quantity", 0)
                     .element("pay", false)
-                    .element("ready", false));
+                    .element("ready", false)
+                    .element("round", true)
+                    .element("soldier", 0)
+                    .element("pick", false)
+                    .element("result", "none"));
             playerSoldiers.put(battleId, map);
         }
 
@@ -110,107 +120,312 @@ public class SiegeBattle {
             String address = params.getString("address");
             String operation = params.getString("operation");
             if (operation.equals("buySoldiers")) {
-                List<Integer> type = castList(params.get("type"), Integer.class);
-                double price = params.getDouble("price");
-                int quantity = params.getInt("quantity");
-                String symbol = "SIG";
-                String signature = params.getString("signature");
-
-                // 首先进行缴费
-                try {
-                    HyperchainService hyperchainService = new HyperchainService();
-                    String transferResult = hyperchainService.transfer(address, Config.getDeployAccount().getAddress(), new Double(price * SiegeParams.getPrecision()).longValue(), symbol, "buy soldiers", signature);
-                    if (transferResult.equals("transfer success")) {
-                        // 更新playerSoldier
-                        List<Integer> oldSoldiers = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
-                        oldSoldiers.addAll(type);
-                        playerSoldiers.get(battleId).get(address).replace("type", oldSoldiers);
-
-                        double oldPrice = playerSoldiers.get(battleId).get(address).getDouble("price");
-                        double newPrice = oldPrice + price;
-                        playerSoldiers.get(battleId).get(address).replace("price", newPrice);
-
-                        int oldQuantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
-                        int newQuantity = oldQuantity + quantity;
-                        playerSoldiers.get(battleId).get(address).replace("quantity", newQuantity);
-
-                        playerSoldiers.get(battleId).get(address).replace("pay", true);
-                        // 告知购买士兵成功
-                        JSONObject jsonObject = new JSONObject()
-                                .element("operation", "transfer")
-                                .element("status", true);
-                        sendMsg(session, jsonObject.toString());
-                    }
-                    else {
-                        // 告知转账失败
-                        JSONObject jsonObject = new JSONObject()
-                                .element("operation", "transfer")
-                                .element("status", false);
-                        sendMsg(session, jsonObject.toString());
-                    }
-                } catch (Exception e) {
-                    System.out.println("Got an exception: " + e.getMessage());
-                }
+//                List<Integer> type = castList(params.get("type"), Integer.class);
+//                double price = params.getDouble("price");
+//                int quantity = params.getInt("quantity");
+//                String symbol = "SIG";
+//                String signature = params.getString("signature");
+//
+//                // 首先进行缴费
+//                try {
+//                    HyperchainService hyperchainService = new HyperchainService();
+//                    String transferResult = hyperchainService.transfer(address, Config.getDeployAccount().getAddress(), new Double(price * SiegeParams.getPrecision()).longValue(), symbol, "buy soldiers", signature);
+//                    if (transferResult.equals("transfer success")) {
+//                        // 更新playerSoldier
+//                        if (type != null) {
+//                            List<Integer> oldSoldiers = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
+////                            List<Integer> oldSoldiers = (List<Integer>) playerSoldiers.get(battleId).get(address).get("type");
+//                            oldSoldiers.addAll(type);
+//                            playerSoldiers.get(battleId).get(address).replace("type", oldSoldiers);
+//
+//                        }
+//                        double oldPrice = playerSoldiers.get(battleId).get(address).getDouble("price");
+//                        double newPrice = oldPrice + price;
+//                        playerSoldiers.get(battleId).get(address).replace("price", newPrice);
+//
+//                        int oldQuantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
+//                        int newQuantity = oldQuantity + quantity;
+//                        playerSoldiers.get(battleId).get(address).replace("quantity", newQuantity);
+//
+//                        playerSoldiers.get(battleId).get(address).replace("pay", true);
+//                        // 告知购买士兵成功
+//                        JSONObject jsonObject = new JSONObject()
+//                                .element("operation", "transfer")
+//                                .element("status", true);
+//                        sendMsg(session, jsonObject.toString());
+//                    }
+//                    else {
+//                        // 告知转账失败
+//                        JSONObject jsonObject = new JSONObject()
+//                                .element("operation", "transfer")
+//                                .element("status", false);
+//                        sendMsg(session, jsonObject.toString());
+//                    }
+//                } catch (Exception e) {
+//                    System.out.println("Got an exception: " + e.getMessage());
+//                }
+                buySoldiers(params, battleId, address, session);
             }
             else if (operation.equals("departure")) {
 //                encryptWithPubKey("044107987A7C6271BBADC66A16B3C9EF7B69B445BBF0273D43B51DCF48FCE4E481C46CAEFA701A670D31D0FF5CEAD10F0A1DAC45D5A0F82B67B8F14C6E2E1BF369", "778076014E4B5D1430BB3A4F6FE14A6FC2D1C2FD973EC7077E62D25B02F2C05D");
-                List<Integer> type = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
-                long price = new Double(playerSoldiers.get(battleId).get(address).getDouble("price") * SiegeParams.getPrecision()).longValue();
-                int quantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
-                try {
-                    HyperchainService hyperchainService = new HyperchainService();
-                    // 考虑将buySoldiers放在购买士兵部分
-                    // 后续改进代码，将两个操作用if else进行嵌套
-                    String buyResult = hyperchainService.buySoldiers(Integer.valueOf(gameId), address, price, type, price, quantity);
-                    String departureResult = hyperchainService.departure(Integer.valueOf(gameId), address);
+//                List<Integer> type = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
+//                long price = new Double(playerSoldiers.get(battleId).get(address).getDouble("price") * SiegeParams.getPrecision()).longValue();
+//                int quantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
+//                try {
+//                    HyperchainService hyperchainService = new HyperchainService();
+//                    // 考虑将buySoldiers放在购买士兵部分
+//                    // 后续改进代码，将两个操作用if else进行嵌套
+////                    String buyResult = hyperchainService.buySoldiers(Integer.valueOf(gameId), address, price, type, price, quantity);
+////                    String departureResult = hyperchainService.departure(Integer.valueOf(gameId), address);
 //                    String buyResult = "success";
 //                    String departureResult = "success";
-                    if (buyResult.equals("success") && (departureResult.equals("success"))) {
-                        String opponent = address.equals(attackerAddress) ? defenderAddress: attackerAddress;
-                        // 更新状态
-                        playerSoldiers.get(battleId).get(address).replace("ready", true);
-                        // 检查对方状态
-                        boolean allReady = playerSoldiers.get(battleId).get(opponent).getBoolean("ready");
-                        if (allReady) {
-                            // 告知玩家结果以及对面的信息
-                            JSONObject jsonObject = new JSONObject()
-                                    .element("operation", "departure")
-                                    .element("status", true)
-                                    .element("ready", true)
-                                    .element("opponent", opponent)
-                                    .element("point", playerSoldiers.get(battleId).get(opponent).getDouble("price"))
-                                    .element("quantity", playerSoldiers.get(battleId).get(opponent).getDouble("quantity"));
-                            sendMsg(session, jsonObject.toString());
-                            // 告知对面自己的信息
-                            JSONObject jsonObject1 = new JSONObject()
-                                    .element("operation", "departure")
-                                    .element("status", true)
-                                    .element("ready", true)
-                                    .element("opponent", address)
-                                    .element("point", playerSoldiers.get(battleId).get(address).getDouble("price"))
-                                    .element("quantity", playerSoldiers.get(battleId).get(address).getDouble("quantity"));
-                            sendMsg(playerSession.get(battleId).get(opponent), jsonObject1.toString());
-                        }
-                        else {
-                            JSONObject jsonObject = new JSONObject()
-                                    .element("operation", "departure")
-                                    .element("status", true)
-                                    .element("ready", false);
-                            sendMsg(session, jsonObject.toString());
-                        }
-                    }
-                    else {
-                        // 告知玩家失败
+//                    if (buyResult.equals("success") && (departureResult.equals("success"))) {
+//                        String opponent = address.equals(attackerAddress) ? defenderAddress: attackerAddress;
+//                        // 更新状态
+//                        playerSoldiers.get(battleId).get(address).replace("ready", true);
+//                        // 检查对方状态
+//                        boolean allReady = playerSoldiers.get(battleId).get(opponent).getBoolean("ready");
+//                        if (allReady) {
+//                            // 告知玩家结果以及对面的信息
+//                            // 考虑玩家自己牌也由服务器发送？
+//                            JSONObject jsonObject = new JSONObject()
+//                                    .element("operation", "departure")
+//                                    .element("status", true)
+//                                    .element("ready", true)
+//                                    .element("opponent", opponent)
+//                                    .element("point", playerSoldiers.get(battleId).get(opponent).getDouble("price"))
+//                                    .element("quantity", playerSoldiers.get(battleId).get(opponent).getDouble("quantity"));
+//                            sendMsg(session, jsonObject.toString());
+//                            // 告知对面自己的信息
+//                            JSONObject jsonObject1 = new JSONObject()
+//                                    .element("operation", "departure")
+//                                    .element("status", true)
+//                                    .element("ready", true)
+//                                    .element("opponent", address)
+//                                    .element("point", playerSoldiers.get(battleId).get(address).getDouble("price"))
+//                                    .element("quantity", playerSoldiers.get(battleId).get(address).getDouble("quantity"));
+//                            sendMsg(playerSession.get(battleId).get(opponent), jsonObject1.toString());
+//
+//                            // 短暂延迟一下
+//                            TimeUnit.SECONDS.sleep(1);
+//                            // 服务器开启战斗时间倒计时
+//                            new Thread(()-> {
+//                                while (round > 0 && !isOver) {
+//                                    try {
+//                                        // 游戏开始倒计时
+//                                        playerSoldiers.get(battleId).get(attackerAddress).replace("round", false);
+//                                        playerSoldiers.get(battleId).get(defenderAddress).replace("round", false);
+//                                        roundCountDown(roundTimer, battleId, round);
+//                                        // 延迟两秒
+//                                        TimeUnit.SECONDS.sleep(2);
+//                                    } catch (InterruptedException e) {
+//                                        e.printStackTrace();
+//                                    }
+//                                    round -= 1;
+//                                }
+//                            }).start();
+//                        }
+//                        else {
+//                            JSONObject jsonObject = new JSONObject()
+//                                    .element("operation", "departure")
+//                                    .element("status", true)
+//                                    .element("ready", false);
+//                            sendMsg(session, jsonObject.toString());
+//                        }
+//                    }
+//                    else {
+//                        // 告知玩家失败
+//                        JSONObject jsonObject = new JSONObject()
+//                                .element("operation", "departure")
+//                                .element("status", false);
+//                        sendMsg(session, jsonObject.toString());
+//                        // 进行退款，后续实现
+//
+//                    }
+//                } catch (Exception e) {
+//                    System.out.println("Got an exception: " + e.getMessage());
+//                }
+                departure(gameId, battleId, address, session);
+            }
+            else if (operation.equals("pickSoldier")) {
+                int soldier = params.getInt("soldier");
+                double point = params.getDouble("point");
+                playerSoldiers.get(battleId).get(address).replace("soldier", soldier);
+                playerSoldiers.get(battleId).get(address).replace("pick", true);
+                // 检查对方是否出牌
+                String opponent = address.equals(attackerAddress) ? defenderAddress: attackerAddress;
+                boolean allPick = playerSoldiers.get(battleId).get(opponent).getBoolean("pick");
+                if (allPick) {
+                    // 首先通知对方己方已出牌
+                    try {
                         JSONObject jsonObject = new JSONObject()
-                                .element("operation", "departure")
-                                .element("status", false);
-                        sendMsg(session, jsonObject.toString());
-                        // 进行退款，后续实现
-
+                                .element("opponentPick", true);
+                        sendMsg(playerSession.get(battleId).get(opponent), jsonObject.toString());
+                    } catch (Exception e) {
+                        System.out.println("Got an exception: " + e.getMessage());
                     }
-                } catch (Exception e) {
-                    System.out.println("Got an exception: " + e.getMessage());
+                    // 链上执行判断
+                    try {
+                        HyperchainService hyperchainService = new HyperchainService();
+                        int aType = playerSoldiers.get(battleId).get(attackerAddress).getInt("soldier");
+                        int dType = playerSoldiers.get(battleId).get(defenderAddress).getInt("soldier");
+                        String result = hyperchainService.pickAndBattle(Integer.valueOf(gameId), attackerAddress, defenderAddress, aType, dType);
+                        Session attackerSession = playerSession.get(battleId).get(attackerAddress);
+                        Session defenderSession = playerSession.get(battleId).get(defenderAddress);
+                        switch (Utils.getValue(result)) {
+                            // 可以考虑后端加上士兵是否在仓库中的验证
+                            case "attacker wins this round": {
+                                // 进攻者获胜
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("result", "win");
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("result", "lose");
+                                double defenderOldPoint = playerSoldiers.get(battleId).get(defenderAddress).getDouble("price");
+                                double defenderNewPoint = defenderOldPoint - SiegeParams.getSoldiersPoint().get(dType);
+                                double attackerNewPoint = playerSoldiers.get(battleId).get(attackerAddress).getDouble("price");
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("price", defenderNewPoint);
+                                int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                                int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                                int defenderNewQuantity = defenderOldQuantity - 1;
+                                int attackerNewQuantity = attackerOldQuantity - 1;
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                                // 告知双方
+                                if (address.equals(attackerAddress)) {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "win")
+                                            .element("myPoint", attackerNewPoint)
+                                            .element("opponentPoint", defenderNewPoint)
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "lose")
+                                            .element("myPoint", defenderNewPoint)
+                                            .element("opponentPoint", attackerNewPoint)
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(defenderSession, jsonObject1.toString());
+                                }
+                                else {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "lose")
+                                            .element("myPoint", defenderNewPoint)
+                                            .element("opponentPoint", attackerNewPoint)
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "win")
+                                            .element("myPoint", attackerNewPoint)
+                                            .element("opponentPoint", defenderNewPoint)
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(attackerSession, jsonObject1.toString());
+                                }
+                                break;
+                            }
+                            case "defender wins this round": {
+                                // 防守者获胜
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("result", "lose");
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("result", "win");
+                                double attackerOldPoint = playerSoldiers.get(battleId).get(attackerAddress).getDouble("price");
+                                double attackerNewPoint = attackerOldPoint - SiegeParams.getSoldiersPoint().get(dType);
+                                double defenderNewPoint = playerSoldiers.get(battleId).get(defenderAddress).getDouble("price");
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("price", attackerNewPoint);
+                                int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                                int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                                int defenderNewQuantity = defenderOldQuantity - 1;
+                                int attackerNewQuantity = attackerOldQuantity - 1;
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                                // 告知双方
+                                if (address.equals(defenderAddress)) {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "win")
+                                            .element("myPoint", defenderNewPoint)
+                                            .element("opponentPoint", attackerNewPoint)
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "lose")
+                                            .element("myPoint", attackerNewPoint)
+                                            .element("opponentPoint", defenderNewPoint)
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(attackerSession, jsonObject1.toString());
+                                }
+                                else {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "lose")
+                                            .element("myPoint", attackerNewPoint)
+                                            .element("opponentPoint", defenderNewPoint)
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "win")
+                                            .element("myPoint", defenderNewPoint)
+                                            .element("opponentPoint", attackerNewPoint)
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(defenderSession, jsonObject1.toString());
+                                }
+                                break;
+                            }
+                            case "tie":
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("result", "tie");
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("result", "tie");
+                                int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                                int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                                int defenderNewQuantity = defenderOldQuantity - 1;
+                                int attackerNewQuantity = attackerOldQuantity - 1;
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                                playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                                playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                                // 告知双方
+                                if (address.equals(attackerAddress)) {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "tie")
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "tie")
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(defenderSession, jsonObject1.toString());
+                                }
+                                else {
+                                    JSONObject jsonObject = new JSONObject()
+                                            .element("result", "tie")
+                                            .element("myQuantity", defenderNewQuantity)
+                                            .element("opponentQuantity", attackerNewQuantity);
+                                    sendMsg(session, jsonObject.toString());
+                                    JSONObject jsonObject1 = new JSONObject()
+                                            .element("result", "tie")
+                                            .element("myQuantity", attackerNewQuantity)
+                                            .element("opponentQuantity", defenderNewQuantity);
+                                    sendMsg(attackerSession, jsonObject1.toString());
+                                }
+                                break;
+                            default:
+                                // error
+                                System.out.println("error");
+                                break;
+                        }
+                    } catch (Exception e) {
+                        System.out.println("Got an exception: " + e.getMessage());
+                    }
                 }
+                else {
+                    // 告知玩家等待
+                }
+
             }
             else {
                 System.out.println("invalid operation");
@@ -279,9 +494,36 @@ public class SiegeBattle {
             Map<String, Session> map = playerSession.get(battleId);
             @Override
             public void run() {
-                System.out.println("Buy soldiers time remains " + --curSec + " s");
+                if (!playerSoldiers.get(battleId).get(attackerAddress).getBoolean("ready") || !playerSoldiers.get(battleId).get(defenderAddress).getBoolean("ready")) {
+                    System.out.println("Buy soldiers time remains " + --curSec + " s");
+                    JSONObject jsonObject = new JSONObject()
+                            .element("stage", "buySoldiers")
+                            .element("timer", curSec);
+                    try {
+                        sendAll(map, jsonObject.toString());
+                    } catch (Exception e) {
+                        System.out.println("Got an exception: " + e.getMessage());
+                    }
+                }
+            }
+        }, 0, 1000);
+        TimeUnit.SECONDS.sleep(seconds);
+        timer.cancel();
+        System.out.println("Buy soldiers time is out");
+    }
+
+    private void roundCountDown(int seconds, String battleId, int round) throws InterruptedException {
+        System.out.println("roundCountDown--- " + round + " : count down from " + seconds + " s");
+
+        Timer timer = new Timer();
+        timer.schedule(new TimerTask() {
+            int curSec = seconds;
+            Map<String, Session> map = playerSession.get(battleId);
+            @Override
+            public void run() {
+                System.out.println("Round " + round + " time remains " + --curSec + " s");
                 JSONObject jsonObject = new JSONObject()
-                        .element("stage", "buySoldiers")
+                        .element("stage", "battle")
                         .element("timer", curSec);
                 try {
                     sendAll(map, jsonObject.toString());
@@ -292,7 +534,7 @@ public class SiegeBattle {
         }, 0, 1000);
         TimeUnit.SECONDS.sleep(seconds);
         timer.cancel();
-        System.out.println("Buy soldiers time is out");
+        System.out.println("Round " + round + " time is out");
     }
 
 //    private void initShop(int seconds, String battleId) throws InterruptedException {
@@ -343,6 +585,331 @@ public class SiegeBattle {
             jsonArray.add(jsonObject);
         }
         sendAll(map, jsonArray.toString());
+    }
+
+    private void buySoldiers(JSONObject params, String battleId, String address, Session session) {
+        List<Integer> type = castList(params.get("type"), Integer.class);
+        double price = params.getDouble("price");
+        int quantity = params.getInt("quantity");
+        String symbol = "SIG";
+        String signature = params.getString("signature");
+
+        // 首先进行缴费
+        try {
+            HyperchainService hyperchainService = new HyperchainService();
+            String transferResult = hyperchainService.transfer(address, Config.getDeployAccount().getAddress(), new Double(price * SiegeParams.getPrecision()).longValue(), symbol, "buy soldiers", signature);
+            if (transferResult.equals("transfer success")) {
+                // 更新playerSoldier
+                if (type != null) {
+                    List<Integer> oldSoldiers = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
+                    assert oldSoldiers != null;
+                    oldSoldiers.addAll(type);
+                    double oldPrice = playerSoldiers.get(battleId).get(address).getDouble("price");
+                    double newPrice = oldPrice + price;
+                    int oldQuantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
+                    int newQuantity = oldQuantity + quantity;
+                    updatePlayerSoldiers(battleId, address, type, newPrice, newQuantity,true, false, true, 0, false, "none");
+                }
+                // 告知购买士兵成功
+                JSONObject jsonObject = new JSONObject()
+                        .element("operation", "transfer")
+                        .element("status", true);
+                sendMsg(session, jsonObject.toString());
+            }
+            else {
+                // 告知转账失败
+                JSONObject jsonObject = new JSONObject()
+                        .element("operation", "transfer")
+                        .element("status", false);
+                sendMsg(session, jsonObject.toString());
+            }
+        } catch (Exception e) {
+            System.out.println("Got an exception: " + e.getMessage());
+        }
+    }
+
+    private void departure(String gameId, String battleId, String address, Session session) {
+        List<Integer> type = castList(playerSoldiers.get(battleId).get(address).get("type"), Integer.class);
+        long price = new Double(playerSoldiers.get(battleId).get(address).getDouble("price") * SiegeParams.getPrecision()).longValue();
+        int quantity = playerSoldiers.get(battleId).get(address).getInt("quantity");
+        try {
+            HyperchainService hyperchainService = new HyperchainService();
+            // 考虑将buySoldiers放在购买士兵部分
+            // 后续改进代码，将两个操作用if else进行嵌套
+            String buyResult = hyperchainService.buySoldiers(Integer.valueOf(gameId), address, price, type, price, quantity);
+            String departureResult = hyperchainService.departure(Integer.valueOf(gameId), address);
+//            String buyResult = "success";
+//            String departureResult = "success";
+            if (buyResult.equals("success") && (departureResult.equals("success"))) {
+                String opponent = address.equals(attackerAddress) ? defenderAddress: attackerAddress;
+                // 更新状态
+                playerSoldiers.get(battleId).get(address).element("ready", true);
+                // 检查对方状态
+                boolean allReady = playerSoldiers.get(battleId).get(opponent).getBoolean("ready");
+                if (allReady) {
+                    // 告知玩家结果以及对面的信息
+                    // 考虑玩家自己牌也由服务器发送？
+                    JSONObject jsonObject = new JSONObject()
+                            .element("operation", "departure")
+                            .element("status", true)
+                            .element("ready", true)
+                            .element("opponent", opponent)
+                            .element("myPoint", playerSoldiers.get(battleId).get(address).getDouble("price"))
+                            .element("opponentPoint", playerSoldiers.get(battleId).get(opponent).getDouble("price"))
+                            .element("myQuantity", playerSoldiers.get(battleId).get(address).getInt("quantity"))
+                            .element("opponentQuantity", playerSoldiers.get(battleId).get(opponent).getInt("quantity"));
+                    sendMsg(session, jsonObject.toString());
+                    // 告知对面自己的信息
+                    JSONObject jsonObject1 = new JSONObject()
+                            .element("operation", "departure")
+                            .element("status", true)
+                            .element("ready", true)
+                            .element("opponent", address)
+                            .element("myPoint", playerSoldiers.get(battleId).get(opponent).getDouble("price"))
+                            .element("opponentPoint", playerSoldiers.get(battleId).get(address).getDouble("price"))
+                            .element("myQuantity", playerSoldiers.get(battleId).get(opponent).getInt("quantity"))
+                            .element("opponentQuantity", playerSoldiers.get(battleId).get(address).getInt("quantity"));
+                    sendMsg(playerSession.get(battleId).get(opponent), jsonObject1.toString());
+
+                    // 短暂延迟一下
+                    TimeUnit.SECONDS.sleep(1);
+                    // 服务器开启战斗时间倒计时
+                    new Thread(()-> {
+                        while (round > 0 && !isOver) {
+                            try {
+                                // 游戏开始倒计时
+                                playerSoldiers.get(battleId).get(attackerAddress).element("round", false);
+                                playerSoldiers.get(battleId).get(defenderAddress).element("round", false);
+                                roundCountDown(roundTimer, battleId, round);
+                                // 延迟两秒
+                                TimeUnit.SECONDS.sleep(2);
+                            } catch (InterruptedException e) {
+                                e.printStackTrace();
+                            }
+                            round -= 1;
+                        }
+                    }).start();
+                }
+                else {
+                    JSONObject jsonObject = new JSONObject()
+                            .element("operation", "departure")
+                            .element("status", true)
+                            .element("ready", false);
+                    sendMsg(session, jsonObject.toString());
+                }
+            }
+            else {
+                // 告知玩家失败
+                JSONObject jsonObject = new JSONObject()
+                        .element("operation", "departure")
+                        .element("status", false);
+                sendMsg(session, jsonObject.toString());
+                // 进行退款，后续实现
+
+            }
+        } catch (Exception e) {
+            System.out.println("Got an exception: " + e.getMessage());
+        }
+    }
+
+    private void pickSoldier(JSONObject params, String gameId, String battleId, String address, Session session) {
+        int soldier = params.getInt("soldier");
+        double point = params.getDouble("point");
+        playerSoldiers.get(battleId).get(address).element("soldier", soldier);
+        playerSoldiers.get(battleId).get(address).element("pick", true);
+        // 检查对方是否出牌
+        // 确定对手
+        String opponent = address.equals(attackerAddress) ? defenderAddress: attackerAddress;
+        boolean allPick = playerSoldiers.get(battleId).get(opponent).getBoolean("pick");
+        if (allPick) {
+            // 首先通知对方己方已出牌
+            try {
+                JSONObject jsonObject = new JSONObject()
+                        .element("opponentPick", true);
+                sendMsg(playerSession.get(battleId).get(opponent), jsonObject.toString());
+            } catch (Exception e) {
+                System.out.println("Got an exception: " + e.getMessage());
+            }
+            // 链上执行判断
+            try {
+                HyperchainService hyperchainService = new HyperchainService();
+                int aType = playerSoldiers.get(battleId).get(attackerAddress).getInt("soldier");
+                int dType = playerSoldiers.get(battleId).get(defenderAddress).getInt("soldier");
+                String result = hyperchainService.pickAndBattle(Integer.valueOf(gameId), attackerAddress, defenderAddress, aType, dType);
+                Session attackerSession = playerSession.get(battleId).get(attackerAddress);
+                Session defenderSession = playerSession.get(battleId).get(defenderAddress);
+                switch (Utils.getValue(result)) {
+                    // 可以考虑后端加上士兵是否在仓库中的验证
+                    case "attacker wins this round": {
+                        // 进攻者获胜
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("result", "win");
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("result", "lose");
+                        double defenderOldPoint = playerSoldiers.get(battleId).get(defenderAddress).getDouble("price");
+                        double defenderNewPoint = defenderOldPoint - SiegeParams.getSoldiersPoint().get(dType);
+                        double attackerNewPoint = playerSoldiers.get(battleId).get(attackerAddress).getDouble("price");
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("price", defenderNewPoint);
+                        int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                        int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                        int defenderNewQuantity = defenderOldQuantity - 1;
+                        int attackerNewQuantity = attackerOldQuantity - 1;
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                        // 告知双方
+                        if (address.equals(attackerAddress)) {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "win")
+                                    .element("myPoint", attackerNewPoint)
+                                    .element("opponentPoint", defenderNewPoint)
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "lose")
+                                    .element("myPoint", defenderNewPoint)
+                                    .element("opponentPoint", attackerNewPoint)
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(defenderSession, jsonObject1.toString());
+                        }
+                        else {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "lose")
+                                    .element("myPoint", defenderNewPoint)
+                                    .element("opponentPoint", attackerNewPoint)
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "win")
+                                    .element("myPoint", attackerNewPoint)
+                                    .element("opponentPoint", defenderNewPoint)
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(attackerSession, jsonObject1.toString());
+                        }
+                        break;
+                    }
+                    case "defender wins this round": {
+                        // 防守者获胜
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("result", "lose");
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("result", "win");
+                        double attackerOldPoint = playerSoldiers.get(battleId).get(attackerAddress).getDouble("price");
+                        double attackerNewPoint = attackerOldPoint - SiegeParams.getSoldiersPoint().get(dType);
+                        double defenderNewPoint = playerSoldiers.get(battleId).get(defenderAddress).getDouble("price");
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("price", attackerNewPoint);
+                        int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                        int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                        int defenderNewQuantity = defenderOldQuantity - 1;
+                        int attackerNewQuantity = attackerOldQuantity - 1;
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                        // 告知双方
+                        if (address.equals(defenderAddress)) {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "win")
+                                    .element("myPoint", defenderNewPoint)
+                                    .element("opponentPoint", attackerNewPoint)
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "lose")
+                                    .element("myPoint", attackerNewPoint)
+                                    .element("opponentPoint", defenderNewPoint)
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(attackerSession, jsonObject1.toString());
+                        }
+                        else {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "lose")
+                                    .element("myPoint", attackerNewPoint)
+                                    .element("opponentPoint", defenderNewPoint)
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "win")
+                                    .element("myPoint", defenderNewPoint)
+                                    .element("opponentPoint", attackerNewPoint)
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(defenderSession, jsonObject1.toString());
+                        }
+                        break;
+                    }
+                    case "tie":
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("result", "tie");
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("result", "tie");
+                        int defenderOldQuantity = playerSoldiers.get(battleId).get(defenderAddress).getInt("quantity");
+                        int attackerOldQuantity = playerSoldiers.get(battleId).get(attackerAddress).getInt("quantity");
+                        int defenderNewQuantity = defenderOldQuantity - 1;
+                        int attackerNewQuantity = attackerOldQuantity - 1;
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("quantity", defenderNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("quantity", attackerNewQuantity);
+                        playerSoldiers.get(battleId).get(attackerAddress).replace("round", true);
+                        playerSoldiers.get(battleId).get(defenderAddress).replace("round", true);
+                        // 告知双方
+                        if (address.equals(attackerAddress)) {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "tie")
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "tie")
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(defenderSession, jsonObject1.toString());
+                        }
+                        else {
+                            JSONObject jsonObject = new JSONObject()
+                                    .element("result", "tie")
+                                    .element("myQuantity", defenderNewQuantity)
+                                    .element("opponentQuantity", attackerNewQuantity);
+                            sendMsg(session, jsonObject.toString());
+                            JSONObject jsonObject1 = new JSONObject()
+                                    .element("result", "tie")
+                                    .element("myQuantity", attackerNewQuantity)
+                                    .element("opponentQuantity", defenderNewQuantity);
+                            sendMsg(attackerSession, jsonObject1.toString());
+                        }
+                        break;
+                    default:
+                        // error
+                        System.out.println("error");
+                        break;
+                }
+            } catch (Exception e) {
+                System.out.println("Got an exception: " + e.getMessage());
+            }
+        }
+        else {
+            // 告知玩家等待
+        }
+
+    }
+
+    private void updatePlayerSoldiers(String battleId, String address, List<Integer> type, double point, int quantity, boolean pay, boolean ready, boolean round, int soldier, boolean pick, String result) {
+        playerSoldiers.get(battleId).get(address).element("type", type);
+        playerSoldiers.get(battleId).get(address).element("price", point);
+        playerSoldiers.get(battleId).get(address).element("quantity", quantity);
+        playerSoldiers.get(battleId).get(address).element("pay", pay);
+        playerSoldiers.get(battleId).get(address).element("ready", ready);
+        playerSoldiers.get(battleId).get(address).element("round", round);
+        playerSoldiers.get(battleId).get(address).element("soldier", soldier);
+        playerSoldiers.get(battleId).get(address).element("pick", pick);
+        playerSoldiers.get(battleId).get(address).element("result", result);
+    }
+
+    private void win(String address) {
+        if (address.equals(attackerAddress)) {
+            // 进攻者获胜
+        }
     }
 
 //    private void encryptWithPubKey(String publicKey, String privateKey) throws NoSuchProviderException, NoSuchAlgorithmException, InvalidAlgorithmParameterException, NoSuchPaddingException, InvalidKeyException, IOException, InvalidKeyException {
